--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -79,6 +79,7 @@ features:
     gravatar: false
     shape: circle
     about_shape: circle
+    type: mp
   comment:
     provider: ''
     disqus:
